@@ -45,6 +45,7 @@ import com.ford.syncV4.proxy.rpc.GenericResponse;
 import com.ford.syncV4.proxy.rpc.GetDTCsResponse;
 import com.ford.syncV4.proxy.rpc.GetVehicleDataResponse;
 import com.ford.syncV4.proxy.rpc.ListFilesResponse;
+import com.ford.syncV4.proxy.rpc.OnAppInterfaceUnregistered;
 import com.ford.syncV4.proxy.rpc.OnAudioPassThru;
 import com.ford.syncV4.proxy.rpc.OnButtonEvent;
 import com.ford.syncV4.proxy.rpc.OnButtonPress;
@@ -2585,7 +2586,7 @@ public class SyncProxyALMManager {
         }
 
         @Override
-        public void onAppUnregisteredReason(String appId, AppInterfaceUnregisteredReason reason) {
+        public void onAppUnregisteredReason(String appId, OnAppInterfaceUnregistered notification) {
 
         }
 
