@@ -1,4 +1,6 @@
 [CW26]
+* syncProxyTester: AppInterfaceUnregisteredReason is displayed as service message
+* SyncProxyTester: SetGlobalProperties: if uncheck all checkboxes of KeyboardProperties structure, anyway request will be sent with parameter keypressMode
 * SYNC Mobile SDK: ProtocolMessageProcessor still send media messages when service is stopped
 * SyncProxyTester: Show request, add empty SoftButtons array in the request
 + SYNC Mobile SDK: SyncMsgVersion update
